[package]
name = "rserver"
version = "0.1.0"
authors = ["Gaurav <gaurav.ssnl@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A TCP server for intercepting requests, modifying request headers, and replacing responses."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
