[package]
name = "rserver"
version = "0.1.5"
authors = ["Gaurav <gaurav.ssnl@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A TCP server for intercepting requests, modifying request headers, and replacing responses."
readme = "README.md"
repository = "https://github.com/gauravssnl/rserver"
keywords = ["server", "socket", "TCP"]
categories = ["web-programming::http-server", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["full"] }
urlparse = "0.7.3"